# plaud-note-manager

./: .env.example  .gitignore  LICENSE  README.md  STATUS.md  pyproject.toml
agent/: AGENT.md
app/: Package.swift
app/Sources/PlaudNoteApp/: ColorHex.swift  CommandPalette.swift  ContentView.swift  Database.swift  FileStore+Auth.swift  FileStore.swift  PlaudAuthSheet.swift  PlaudNoteApp.swift  PlaudWebAuthCapture.swift  PlaudWebLoginScript.swift  PlaudWebLoginView.swift
cli/: main.py  onboard.py
core/: __init__.py  app_config.py  auth_status.py  classification.py  client.py  config.py  disclosure.py  integrate.py  locator.py  metadata.py  model_registry.py  models.py  paths.py  progress.py  refresh_auth.py  slots.py  storage.py  summarize.py  tags.py  templates.py  transcribe.py  vault_index.py  web_auth.py
docs/: DISCLOSURE.md  PLAUD-ACCESS-LAYERS.md  REQUESTS.md  STORAGE.md
scripts/: package-macos-app.sh
skill/: SKILL.md
templates/: cmds-coaching.md  cmds-lecture.md  cmds-meeting.md  default.md  integrated.md  lecture.md  meeting.md  metadata.md  vault-meeting-note.md
tests/: test_auth_refresh.py  test_auth_status.py  test_classification.py  test_client.py  test_disclosure.py  test_folder_speaker.py  test_integrate.py  test_locator.py  test_metadata_helpers.py  test_model_registry.py  test_progress.py  test_search.py  test_seen_starred.py  test_storage.py  test_summarize.py  test_tags_pin.py  test_transcribe.py  test_vault_index.py  test_web_auth.py
web/: README.md  index.html
web/assets/og/templates/: og-web.html
web/scripts/: build-og.sh
