[project]
name = "plaud-note-manager"
version = "0.5.0"
description = "Plaud Cloud sync, management, and processing workspace"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
plaud = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
